--- a/exercises/box-model-padding-drills/css/drill.css
+++ b/exercises/box-model-padding-drills/css/drill.css
@@ -1,34 +1,33 @@
 /* Drill 1 - Write your code solution below */
-#d1-container-1 {
+/* #d1-container-1 {
     padding: 36px;
-}
+} */
 
 /* Drill 2 - Write your code solution below */
-#d2-container-2 {
+/* #d2-container-2 {
     padding: 24 px 48px;
-}
+}/*
 
 /* Drill 3 - Write your code solution below */
-#d3-div-2 {
+/* #d3-div-2 {
     padding: 12px 48px 12px 48px;
 }
-#d3-div-1 {
+.d3-div-1 {
     padding: 12px;
-}
-
+} */
 /* Drill 4 - Write your code solution below */
-#d4-div-1 {
-    padding: 24px;
+/*#d4-div-1 {
+    padding: 25px;
 }
 #d4-div-2 {
-    padding-bottom: 0px;
-}
+    padding-top: 25px;
+} */
 
 /* Drill 5 - Write your code solution below */
-.d5-s {
+/* .d5-s {
     padding: 25px;
 }
 .d5-container {
     padding: 25px;
     text-align: center;
-}
+} */
