--- a/projects/studio-gallery/css/style.css
+++ b/projects/studio-gallery/css/style.css
@@ -28,5 +28,5 @@
     margin-top: 100px;
     border: 5px solid black;
     padding: 24px;
-    background-color: grey;
+    background-color: goldenrod;
 }
