--- a/projects/studio-gallery/css/style.css
+++ b/projects/studio-gallery/css/style.css
@@ -7,15 +7,16 @@
     Good luck, and have fun!
 */
 
-#pic1 {
+.pic1 {
     width: 100px;
     margin-top: 50px;
     border: 10 solid brown;
     padding: 8px;
     background-color: antiquewhite;
+    href
 }
 
-#pic2 {
+.pic2 {
     width: 100px;
     margin-top: 50px;
     border: 10 solid brown;
@@ -23,7 +24,7 @@
     background-color: blanchedalmond;
 }
 
-#frame1 {
+.frame1 {
     width: 80px;
     margin-top: 100px;
     border: 5px solid black;
