--- a/projects/dropdown-menu-site/css/style.css
+++ b/projects/dropdown-menu-site/css/style.css
@@ -5,4 +5,60 @@
 body {
     margin: 0px;
     font-family: sans-serif;
+    background-color:ghostwhite;
+}
+#navbar {
+    display: flex;
+    background:linear-gradient(to bottom, #DEB887,#B76C0B);
+    justify-content: space-between;
+}
+#navbar #a {
+    display: inline-block;
+    text-decoration: none;
+    padding: 24px;
+}
+#navbar #logo {
+    background-image: image();
+}
+.dropdown-container {
+    position: relative;
+}
+.dropdown-menu {
+    position:absolute;
+    opacity: 0;
+    visibility: hidden;
+    transition:
+        opacity: 0.25s
+        visibility: 0.25s;
+}
+.dropdown-container:last-child .dropdown-menu {
+    right: 0px;
+}
+.dropdown-container:hover .dropdown-menu {
+    opacity: 1;
+    visibility: visible;
+}
+.dropdown-menu a {
+    background-color: antiquewhite;
+    width: 100%;
+    min-width: 200px;
+}
+#navbar a:hover {
+    background: linear-gradient(to top, #DEB887,#B76C0B);
+}
+#navbar .dropdown-container {
+    flex: auto;
+    justify-content: right;
+    padding: auto;
+}
+#row-1 {
+    display: flex;
+    justify-content: space-between;
+}
+#row-2 {
+    display: flex;
+    justify-content: space-between;
+}
+.card {
+    margin: auto;
 }
