--- a/projects/dropdown-menu-site/css/style.css
+++ b/projects/dropdown-menu-site/css/style.css
@@ -32,7 +32,7 @@ body {
     opacity: 0;
     visibility: hidden;
     transition:
-        opacity: 0.25s
+        opacity: 0.25s;
         visibility: 0.25s;
 }
 .dropdown-container:last-child .dropdown-menu {
